update the files

--- a/delhivery.html
+++ b/delhivery.html
@@ -25,21 +25,21 @@
   <div class="cards">
 
     <div class="card">
-      <img src="https://source.unsplash.com/300x200/?burger" alt="">
+      <img src="mymeal/bk.jpg" alt="">
       <h3>Burger King</h3>
       <p>Fast Food • ₹200 for one</p>
       <span>⭐ 4.2</span>
     </div>
 
     <div class="card">
-      <img src="https://source.unsplash.com/300x200/?pizza" alt="">
+      <img src="mymeal/pizza.jpg" alt="">
       <h3>Domino's</h3>
       <p>Pizza • ₹250 for one</p>
       <span>⭐ 4.1</span>
     </div>
 
     <div class="card">
-      <img src="https://source.unsplash.com/300x200/?indian-food" alt="">
+      <img src="mymeal/north.jpg" alt="">
       <h3>Punjabi Tadka</h3>
       <p>North Indian • ₹180 for one</p>
       <span>⭐ 4.3</span>
