--- a/dineout.html
+++ b/dineout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Foodiverse | Dine out </title>
-    <link rel = "stylesheet" href="dd.css">
+    <link rel = "stylesheet" href="fieldpro.css">
 </head>
 <body>
     <!-- HEADER -->
@@ -21,26 +21,47 @@
   <div class="cards">
 
     <div class="card">
-      <img src="https://source.unsplash.com/300x200/?restaurant" alt="">
-      <h3>Barbeque Nation</h3>
-      <p>Buffet • ₹800 for two</p>
+      <img src="mymeal/oakaz.jpg" alt="">
+      <h3>oakaz Rooftop restaurant</h3>
+      <p>Buffet • ₹1200 for two</p>
       <span>⭐ 4.5</span>
     </div>
 
     <div class="card">
-      <img src="https://source.unsplash.com/300x200/?cafe" alt="">
-      <h3>Cafe Coffee Day</h3>
+      <img src="mymeal/cc.jpg" alt="">
+      <h3>The Coffee Concept </h3>
       <p>Cafe • ₹600 for two</p>
       <span>⭐ 4.0</span>
     </div>
 
     <div class="card">
-      <img src="https://source.unsplash.com/300x200/?fine-dining" alt="">
-      <h3>Mainland China</h3>
+      <img src="mymeal\ber.avif" alt="">
+      <h3>Berlin - House de Gourmet</h3>
       <p>Chinese • ₹1,200 for two</p>
       <span>⭐ 4.4</span>
     </div>
+    
+    
+    <div class="card">
+      <img src="mymeal\pun.jpg" alt="">
+      <h3>Nanaksar Dhaba</h3>
+      <p>Punjabi • 800 for two</p>
+      <span>⭐ 4.5</span>
+    </div>
 
+    <div class="card">
+      <img src="https://source.unsplash.com/300x200/?cafe" alt="">
+      <h3> Fusion culture </h3>
+      <p>Cafe • ₹1000 for two</p>
+      <span>⭐ 4.0</span>
+    </div>
+
+    <div class="card">
+      <img src="https://source.unsplash.com/300x200/?fine-dining" alt="">
+      <h3>Banana leaf </h3>
+      <p>South INdian  • ₹800 for two</p>
+      <span>⭐ 4.4</span>
+    </div>
   </div>
 </section>
 </body>
