--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rasoi Express</title>
+  <title>FOODIVERSE</title>
   <link rel="stylesheet" href="fieldpro.css">
 </head>
 
@@ -35,9 +35,9 @@
   <div class="overlay-text">
     <h1>ABOUT US</h1>
     <p>
-      FOODIVERSE is your ultimate food destination, bringing the world's flavors to you.
-      Order from diverse cuisines, get fast delivery, book tables, or plan catering —
-      making every meal effortless and enjoyable.
+      FOODIVERSE is your ultimate food destination, bringing the world’s flavors directly to your doorstep. From quick and convenient food deliveries to curated dining experiences, FOODIVERSE connects you with a wide range of restaurants and cuisines to satisfy every craving.
+      Whether you’re ordering a comforting meal at home, booking a table for a special evening, or planning catering for events and gatherings, FOODIVERSE makes the entire process simple and hassle-free. With an easy-to-use platform, reliable service, and diverse menu options, we ensure that every meal—big or small—becomes an effortless, enjoyable, and memorable experience.
+      
     </p>
   </div>
 </section>
