--- a/search.html
+++ b/search.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rasoi express | Search</title>
-  <link rel="stylesheet" href="style.css">
+  <title>FOODIVERSE | Search</title>
+  <link rel="stylesheet" href="fieldpro.css">
 </head>
 <body>
 
