--- a/offer.html
+++ b/offer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Rasoi Express  | Offers</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fieldpro.css">
 </head>
 <body>
 
