--- a/index.html
+++ b/index.html
@@ -68,10 +68,26 @@
   </div>
 </section>
 
-<!-- ================= FOOTER ================= -->
+<!-- ================= INFO ================= -->
+<div class="info">
+  <h1> LEARN MORE </h1><br>
+  <h2> Privacy </h2><br>
+  <h2> Security</h2><br>
+  <h2>Terms of Services </h2><br>
+  <h2>Help Support</h2><br>
+
+
+  <h1>CONTACT DETAILS </h1><br>
+  <H2>E-mail : foodiverse2026@gmail.com</H2><br>
+
+  </H2>
+
+</div>
+
+<!---------------------FOOTER ------------------->
+
 <footer class="footer">
-  <h1> FOODIVERSE</h1><br>
-  <h3>for more information coontact us </h3>
+<h4>@2026 FOODIVERSE | WEB FIELD PROJECT BY KRATIKA BAJAJ</h4>
 </footer>
 
 </body>
