--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
 </section>
 
 <!-- ================= INFO ================= -->
-<div class="info">
-  <h1> LEARN MORE </h1><br>
-  <h2> Privacy </h2><br>
-  <h2> Security</h2><br>
-  <h2>Terms of Services </h2><br>
-  <h2>Help Support</h2><br>
+<section class="info">
+  <h2> LEARN MORE </h2><br>
+  <h3> Privacy </h3><br>
+  <h3> Security</h3><br>
+  <h3>Terms of Services </h3><br>
+  <h3>Help Support</h3><br>
 
 
-  <h1>CONTACT DETAILS </h1><br>
-  <H2>E-mail : foodiverse2026@gmail.com</H2><br>
+  <h2>CONTACT DETAILS </h2><br>
+  <H3>E-mail : foodiverse2026@gmail.com</H3><br>
 
   </H2>
 
-</div>
+</section>
 
 <!---------------------FOOTER ------------------->
 
