--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 <!-- ================= INFO ================= -->
 <section class="info">
+  <div class="inf">
   <h2> LEARN MORE </h2><br>
   <h3> Privacy </h3><br>
   <h3> Security</h3><br>
@@ -80,7 +81,8 @@
   <h2>CONTACT DETAILS </h2><br>
   <H3>E-mail : foodiverse2026@gmail.com</H3><br>
 
-  </H2>
+
+   </div>
 
 </section>
 
