--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
   <h3> Privacy </h3><br>
   <h3> Security</h3><br>
   <h3>Terms of Services </h3><br>
-  <h3>Help Support</h3><br>
+  <h3>Help and Support</h3><br>
 
 
   <h2>CONTACT DETAILS </h2><br>
   <H3>E-mail : foodiverse2026@gmail.com</H3><br>
+  <h3>facebook  : foodiverse2026</h3>
+  <h3>Instagram page : foodiverse_online_meal</h3>
 
 
    </div>
