--- a/offer.html
+++ b/offer.html
@@ -21,7 +21,7 @@
 
   <div class="offer-card">
     <h3>₹100 Cashback</h3>
-    <p>Use code SWIGGY100</p>
+    <p>Use code FOODIVERSE100</p>
   </div>
 </div>
 
