--- a/signin.html
+++ b/signin.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Rasoi express | sign in </title>
+        <title>FOODIVERSE | sign in </title>
         <link rel ="stylesheet" href="fieldpro.css">
     </head>
         
