--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
   <h2>CONTACT DETAILS </h2><br>
-  <H3>E-mail : foodiverse2026@gmail.com</H3><br>
+  <H3>E-mail : foodiverse2026@gmail.com</H3>
   <h3>facebook  : foodiverse2026</h3>
   <h3>Instagram page : foodiverse_online_meal</h3>
 
